--- a/wsgi.ini
+++ b/wsgi.ini
@@ -2,7 +2,10 @@
 
 vhost = true
 socket = 0.0.0.0:8001 
-chdir=/home/deadstone/Code/chanvoter/chanvoter
+chdir = /home/deadstone/chanvoter/chanvoter
+env = /home/deadstone/chanvoter/bin
 module = wsgi
 callable = application 
+processes = 4
+master = 1
 
