--- a/deploy/chanvoter.conf
+++ b/deploy/chanvoter.conf
@@ -1,10 +1,13 @@
 server {
     listen 80;
-    listen [::]:80;
-    server_name chanvoter.ochk.tk;
 
     location / {
        include uwsgi_params;
-       uwsgi_pass localhost:8001;
+       uwsgi_pass 0.0.0.0:8001;
+    }
+
+    location /resources {
+        alias /home/deadstone/Projects/chanvoter/chanvoter/resources;
+        autoindex on;
     }
 }
