--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==1.0.3
 sqlalchemy==1.3.4
 flask-sqlalchemy==2.4.0
-flask-marshmallow=0.10.1
+flask-marshmallow==0.10.1
 marshmallow==2.19.2
 uwsgi==2.0.18
